@@ -7,13 +7,12 @@
 
 <project xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance" xmlns = "http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation = "http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <parent>
         <groupId>com.telenav.kivakit</groupId>
         <artifactId>kivakit-filesystems</artifactId>
         <version>1.1.2-SNAPSHOT</version>
     </parent>
-
-    <name>KivaKit Extensions - Filesystems - HDFS</name>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>kivakit-filesystems-hdfs</artifactId>
@@ -37,5 +36,27 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <excludedGroups>${exclude.test.groups}</excludedGroups>
+                    <systemPropertyVariables>
+                        <testQuick>${testQuick}</testQuick>
+                    </systemPropertyVariables>
+                    <argLine>
+                        --add-opens org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
+                        --add-opens org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
+                        --add-opens org.apiguardian.api/org.apiguardian.api=ALL-UNNAMED
+                        -Xmx2g
+                    </argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
